--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
     tools:context="com.towerofsword.user.towerofsword.MainActivity">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_lock_lock"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:srcCompat="@drawable/homepage"
         android:id="@+id/start_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:scaleType="fitXY"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="94dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
