--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,24 @@
     tools:context="com.towerofsword.user.towerofsword.MainActivity">
 
     <ImageButton
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        app:srcCompat="@drawable/homepage"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/taptostart"
+        android:layout_marginTop="16dp"
+        android:id="@+id/taptostart"
+        android:scaleType="fitXY"
+        android:layout_below="@+id/start_button"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/transparent" />
+
+    <ImageButton
+        app:srcCompat="@drawable/towerofsword"
         android:id="@+id/start_button"
         android:scaleType="fitXY"
         android:background="@android:color/transparent"
-        android:layout_marginTop="94dp"
+        android:layout_marginTop="69dp"
+        android:layout_width="270dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_height="270dp" />
 </RelativeLayout>
