--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.towerofsword.user.towerofsword.MainActivity">
+    android:layout_height="match_parent">
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:id="@+id/btnTalent"
+        android:text="天賦"
+        android:textSize="30sp"
+        android:layout_marginBottom="35dp"
+        android:layout_above="@+id/btnEquipment"
+        android:layout_alignStart="@+id/btnEquipment" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:id="@+id/btnRecord"
+        android:text="記錄"
+        android:textSize="30sp"
+        android:layout_marginBottom="36dp"
+        android:layout_above="@+id/btnTalent"
+        android:layout_alignStart="@+id/btnTalent" />
+
+    <Button
+        android:text="冒險"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginBottom="69dp"
+        android:id="@+id/btnAdventure"
+        android:textSize="30sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="26dp"
+        android:id="@+id/btnEquipment"
+        android:text="裝備"
+        android:textSize="30sp"
+        android:layout_alignBaseline="@+id/btnAdventure"
+        android:layout_alignBottom="@+id/btnAdventure"
+        android:layout_alignParentEnd="true" />
+
 
 </RelativeLayout>
