--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,7 @@
         android:id="@+id/btnTalent"
         android:text="天賦"
         android:textSize="30sp"
+        android:background="@drawable/buttonselect"
         android:layout_marginBottom="35dp"
         android:layout_above="@+id/btnEquipment"
         android:layout_alignStart="@+id/btnEquipment" />
@@ -19,6 +20,7 @@
         android:id="@+id/btnRecord"
         android:text="記錄"
         android:textSize="30sp"
+        android:background="@drawable/buttonselect"
         android:layout_marginBottom="36dp"
         android:layout_above="@+id/btnTalent"
         android:layout_alignStart="@+id/btnTalent" />
@@ -31,6 +33,7 @@
         android:layout_marginBottom="69dp"
         android:id="@+id/btnAdventure"
         android:textSize="30sp"
+        android:background="@drawable/buttonselect"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
@@ -41,6 +44,7 @@
         android:id="@+id/btnEquipment"
         android:text="裝備"
         android:textSize="30sp"
+        android:background="@drawable/buttonselect"
         android:layout_alignBaseline="@+id/btnAdventure"
         android:layout_alignBottom="@+id/btnAdventure"
         android:layout_alignParentEnd="true" />
