--- a/app/src/main/res/layout/activity_adventure.xml
+++ b/app/src/main/res/layout/activity_adventure.xml
@@ -213,23 +213,23 @@
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView2"
         android:layout_toStartOf="@+id/imageView2"
         android:id="@+id/item1"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView3"
         android:layout_toStartOf="@+id/imageView3"
         android:id="@+id/item2"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
@@ -245,197 +245,197 @@
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView3"
         android:layout_toEndOf="@+id/imageView3"
         android:id="@+id/item4"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView4"
         android:layout_toEndOf="@+id/imageView4"
         android:id="@+id/item5"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView7"
         android:layout_toStartOf="@+id/imageView7"
         android:id="@+id/item6"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView8"
         android:layout_toStartOf="@+id/imageView8"
         android:id="@+id/item7"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_above="@+id/item3"
         android:layout_centerHorizontal="true"
         android:id="@+id/item8"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView8"
         android:layout_toEndOf="@+id/imageView8"
         android:id="@+id/item9"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView9"
         android:layout_toEndOf="@+id/imageView9"
         android:id="@+id/item10"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView12"
         android:layout_toStartOf="@+id/imageView12"
         android:id="@+id/item11"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView13"
         android:layout_toStartOf="@+id/imageView13"
         android:id="@+id/item12"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_above="@+id/item8"
         android:layout_centerHorizontal="true"
         android:id="@+id/item13"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView13"
         android:layout_toEndOf="@+id/imageView13"
         android:id="@+id/item14"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView14"
         android:layout_toEndOf="@+id/imageView14"
         android:id="@+id/item15"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView17"
         android:layout_toStartOf="@+id/imageView17"
         android:id="@+id/item16"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView18"
         android:layout_toStartOf="@+id/imageView18"
         android:id="@+id/item17"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_above="@+id/item13"
         android:layout_centerHorizontal="true"
         android:id="@+id/item18"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView18"
         android:layout_toEndOf="@+id/imageView18"
         android:id="@+id/item19"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView19"
         android:layout_toEndOf="@+id/imageView19"
         android:id="@+id/item20"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView22"
         android:layout_toStartOf="@+id/imageView22"
         android:id="@+id/item21"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView23"
         android:layout_toStartOf="@+id/imageView23"
         android:id="@+id/item22"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -449,23 +449,23 @@
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView23"
         android:layout_toEndOf="@+id/imageView23"
         android:id="@+id/item24"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@android:color/transparent"
         android:layout_alignTop="@+id/imageView24"
         android:layout_toEndOf="@+id/imageView24"
         android:id="@+id/item25"
         android:background="@android:color/transparent"
-        android:scaleType="centerCrop"
-        android:elevation="1dp" />
+        android:elevation="1dp"
+        android:scaleType="fitCenter" />
 
     <ImageButton
         android:layout_width="70dp"
