--- a/app/src/main/res/layout/activity_adventure.xml
+++ b/app/src/main/res/layout/activity_adventure.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/tower_play">
 
 
     <ImageView
@@ -727,18 +728,6 @@
         android:layout_toEndOf="@+id/block24"
         android:id="@+id/block25" />
 
-    <Button
-        android:text="狀態"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="30dp"
-        android:id="@+id/btnStatus"
-        android:textSize="30sp"
-        android:background="@drawable/buttonselect"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
     <ImageView
         android:layout_width="90dp"
         android:layout_height="90dp"
@@ -747,6 +736,18 @@
         android:id="@+id/imageViewKirito"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="status"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnStatus"
+        android:textSize="30sp"
+        android:background="@drawable/buttonselect"
+        android:layout_width="130dp"
+        android:layout_alignTop="@+id/imageViewKirito"
+        android:layout_toStartOf="@+id/imageViewKirito"
+        android:layout_marginTop="15dp"
+        android:typeface="monospace" />
 
 
 </RelativeLayout>
