--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.towerofsword.user.towerofsword.MainActivity">
+    tools:context="com.towerofsword.user.towerofsword.MainActivity"
+    android:background="@drawable/title_tower">
 
     <ImageButton
-        android:layout_width="500dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/taptostart"
-        android:layout_marginTop="16dp"
         android:id="@+id/taptostart"
         android:scaleType="fitXY"
-        android:layout_below="@+id/start_button"
-        android:layout_alignParentStart="true"
-        android:background="@android:color/transparent" />
-
-    <ImageButton
-        app:srcCompat="@drawable/towerofsword"
-        android:id="@+id/start_button"
-        android:scaleType="fitXY"
         android:background="@android:color/transparent"
-        android:layout_marginTop="69dp"
-        android:layout_width="270dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_height="270dp" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="131dp" />
+
 </RelativeLayout>
