--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_width="200dp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:paddingTop="5dp" />
 
     <Button
         android:layout_height="60dp"
@@ -28,7 +29,8 @@
         android:layout_alignEnd="@+id/btnEquipment"
         android:layout_marginBottom="24dp"
         android:layout_width="130dp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:paddingTop="5dp" />
 
     <Button
         android:layout_height="60dp"
@@ -41,7 +43,8 @@
         android:layout_above="@+id/btnTalent"
         android:layout_alignStart="@+id/btnTalent"
         android:layout_width="130dp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:paddingTop="5dp" />
 
     <Button
         android:text="adventure"
@@ -55,7 +58,8 @@
         android:layout_marginBottom="30dp"
         android:layout_width="200dp"
         android:textAlignment="gravity"
-        android:gravity="center_vertical|center_horizontal|clip_horizontal" />
+        android:gravity="center_vertical|center_horizontal|clip_horizontal"
+        android:paddingTop="5dp" />
 
 
 </RelativeLayout>
