--- a/app/src/main/res/layout/activity_adventure.xml
+++ b/app/src/main/res/layout/activity_adventure.xml
@@ -730,12 +730,11 @@
         android:id="@+id/block25" />
 
     <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        app:srcCompat="@drawable/kirito1"
-        android:layout_marginBottom="15dp"
+        app:srcCompat="@drawable/character"
         android:id="@+id/imageViewKirito"
-        android:layout_alignParentBottom="true"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -748,7 +747,8 @@
         android:typeface="monospace"
         android:paddingTop="5dp"
         android:layout_alignBottom="@+id/imageViewKirito"
-        android:layout_toStartOf="@+id/imageViewKirito" />
+        android:layout_toStartOf="@+id/imageViewKirito"
+        android:layout_marginBottom="26dp" />
 
 
 </RelativeLayout>
