--- a/app/src/main/res/layout/activity_battle_result.xml
+++ b/app/src/main/res/layout/activity_battle_result.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="300dp"
-    android:layout_height="400dp">
+    android:layout_height="400dp"
+    android:background="#7f8080"
+    >
 
     <TextView
         android:text="+30"
